public/stylesheets/custom.css
body { 
  background: url(/images/leaf-header.jpeg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; 
}

a.navbar-font {
  font-size : 140%;
  font-family: 'Roboto Condensed', serif;
  color: #02132d;
  opacity: 0.9;
}

a.body-medium {
  font-family: 'Roboto Condensed', serif;
  color: #5a95f4;
  opacity: 0.8;
}

a.credits {
  font-family: 'Roboto Condensed', serif;
  color: #5a95f4; 
}

a.navbar-font:hover, a.body-medium:hover, a.credits:hover {
  color: hotpink;
  text-decoration: none !important;
}

a.navbar-font:visited, a.body-medium:visited {
  text-decoration: none ;
}

.navbar-default {
    background-color: #06011a;
    border-color: #000000;
}

.navbar-default .navbar-nav > li > a {
    color: #a3bfcc;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #c7542a;
}

.container {
  height: 100%;
  padding-left: 0px;
  padding-right: 0px;
}

.credits {
  padding-top: 10px;
  font-family: 'Roboto Condensed', serif;
  color: #e8ebed;
  font-size: 90%; 
}

.maintile {
  background : #000000;
  padding: 10px;
  opacity: 0.6;
}

.professional-image {
  margin-left: 20px;
  margin-bottom: 6px;
}

a.professional-image:hover {
  -webkit-filter: invert(50%); /* Safari 6.0 - 9.0 */
  invert: 50%;
}

.about-icon {
  margin-right: 10px;
  margin-left: 15px;
  height: 20px;
}

.page-title {
  font-size : 400%;
  font-family: 'Oswald', serif;
  color: #02132d;
  text-align: left;
  opacity: 0.85;
}

.body-large {
  font-family: 'Roboto Condensed', serif;
  color: #e8ebed;
  font-size: 150%; 
  opacity: 0.95;
}

.body-medium {
  font-family: 'Roboto Condensed', serif;
  color: #e8ebed;
  font-size: 110%; 
  opacity: 0.9;
}

.footer-h6 {
  font-family: 'Roboto Condensed', serif;
  color: #e8ebed;
  font-size: 100%;	
  opacity: 0.3;
}

